Change success background color to var(--red)

--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
         }
 
         .success {
-            background: #2E7D32 !important;
+            background: var(--red) !important;
         }
 
         /* Footer */
@@ -274,6 +274,7 @@
         <div class="brand-side">
             <div class="logo-container">
                 <img src="logo.png" alt="NVR SAY NVR" class="logo">
+                <p class="brand-tagline">NEVER SAY NEVER</p>
             </div>
         </div>
 
