Change red color variable and remove tagline
Updated the red color variable in CSS and removed the brand tagline.

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             --white: #FFFFFF;
             --gray: #666666;
             --light-gray: #F5F5F5;
-            --red: #A52A2A;
+            --red: #BF372D;
         }
 
         html, body {
@@ -274,7 +274,6 @@
         <div class="brand-side">
             <div class="logo-container">
                 <img src="logo.png" alt="NVR SAY NVR" class="logo">
-                <p class="brand-tagline">NEVER SAY NEVER</p>
             </div>
         </div>
 
