Update tagline to include branding for sale

--- a/index.html
+++ b/index.html
@@ -280,7 +280,7 @@
         <!-- Right: Content -->
         <div class="content-side">
             <h1 class="domain">nvrsaynvr.com</h1>
-            <p class="tagline">This domain is for sale</p>
+            <p class="tagline">This domain & branding are for sale</p>
             
             <div class="price-section">
                 <p class="price-label">Asking price</p>
